Einfügen von Zoom-Buttons in der Navbar

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -41,7 +41,14 @@
                   </ul>
                 </li>
                 </ul>
-            <button class="btn btn-outline-light" id="logoutBtn">Abmelden</button>
+            <span class="navbar-text me-2 text-light" style="font-size: 0.9em;">Zoom:</span>
+<button class="btn btn-outline-light btn-sm me-1" id="zoom-out-btn" title="Schrift verkleinern">
+    <i class="bi bi-zoom-out"></i>
+</button>
+<button class="btn btn-outline-light btn-sm me-2" id="zoom-in-btn" title="Schrift vergrößern">
+    <i class="bi bi-zoom-in"></i>
+</button>
+<button class="btn btn-outline-light" id="logoutBtn">Abmelden</button>
         </div>
     </div>
 </nav>
