Sortierung bei Rundgang hinzugefügt

--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -108,18 +108,17 @@
               <th style="width:36px;">
                 <input type="checkbox" id="select-all-devices">
               </th>
-              <th data-sort="category_name" class="sortable">Kategorie</th>
-              <th data-sort="model_name" class="sortable">Modell</th>
+              <th data-sort="category_name" class="sortable-header">Kategorie</th>
+              <th data-sort="model_name" class="sortable-header">Modell</th>
 
-              <th data-sort="hostname" class="sortable">Hostname</th>
-              
+              <th data-sort="hostname" class="sortable-header">Hostname</th>
 
-              <th data-sort="serial_number" class="sortable">Seriennummer</th>
-              <th data-sort="inventory_number" class="sortable">Inventarnummer</th>
-              <th data-sort="mac_address" class="sortable">MAC-Adresse</th>
-              <th data-sort="ip_address" class="sortable">IP-Adresse</th>
-              <th data-sort="room" class="sortable">Raum</th>
-              <th data-sort="active" class="sortable">Status</th>
+              <th data-sort="serial_number" class="sortable-header">Seriennummer</th>
+              <th data-sort="inventory_number" class="sortable-header">Inventarnummer</th>
+              <th data-sort="mac_address" class="sortable-header">MAC-Adresse</th>
+              <th data-sort="ip_address" class="sortable-header">IP-Adresse</th>
+              <th data-sort="room" class="sortable-header">Raum</th>
+              <th data-sort="active" class="sortable-header">Status</th>
               <th style="width:120px;">Aktion</th>
             </tr>
           </thead>
