--- a/views/walkthrough.ejs
+++ b/views/walkthrough.ejs
@@ -66,14 +66,14 @@
         <table class="table table-hover align-middle">
           <thead>
             <tr>
-              <th>Kategorie</th>
-              <th>Modell</th>
-              <th>Hostname</th>
-              <th>Seriennummer</th>
-              <th>Inventarnummer</th>
-              <th>MAC-Adresse</th>
-              <th>IP-Adresse</th>
-              <th>Status</th>
+              <th class="sortable-header" data-sort="category_name">Kategorie</th>
+              <th class="sortable-header" data-sort="model_name">Modell</th>
+              <th class="sortable-header" data-sort="hostname">Hostname</th>
+              <th class="sortable-header" data-sort="serial_number">Seriennummer</th>
+              <th class="sortable-header" data-sort="inventory_number">Inventarnummer</th>
+              <th class="sortable-header" data-sort="mac_address">MAC-Adresse</th>
+              <th class="sortable-header" data-sort="ip_address">IP-Adresse</th>
+              <th class="sortable-header" data-sort="status">Status</th>
               <th>Notizen</th>
               <th style="width:120px;">Aktion</th>
             </tr>
