Fehlerbehebungen, Datumdarstellung teilweise korrigiert

--- a/views/master-data.ejs
+++ b/views/master-data.ejs
@@ -62,7 +62,7 @@
     <div class="col-md-2"><label class="form-label">Kategorie*</label><select id="model-category_id" class="form-select" required></select></div>
     <div 
 class="col-md-2"><label class="form-label">Hersteller</label><input type="text" id="model-manufacturer" class="form-control" placeholder="z.B. HP"></div>
-    <div class="col-md-2"><label class="form-label">Typ</label><input type="text" id="model-type" class="form-control" placeholder="z.B.
+    <div class="col-md-2"><label class="form-label">Type</label><input type="text" id="model-type" class="form-control" placeholder="z.B.
 Laptop"></div>
 
     <div class="col-md-3"><label class="form-label">Modellname</label><input type="text" id="model-model_name" class="form-control" placeholder="z.B.
@@ -89,7 +89,7 @@ EliteBook 840"></div>
                                     <tr>
                                         <th>Kategorie</th>
                                         <th>Hersteller</th>
-                                        <th>Typ</th>
+                                        <th>Type</th>
                                         <th>Modellname</th>
                                         <th>Modellnummer</th>
                                         <th>Geräte (Aktiv/Gesamt)</th>
