--- a/views/master-data.ejs
+++ b/views/master-data.ejs
@@ -73,8 +73,7 @@ EliteBook 840"></div>
     <div class="col-md-1"><label class="form-label">Netzwerk</label><select id="model-has_network" class="form-select"><option value="0">Nein</option><option value="1">Ja</option></select></div>
 
     <%# Zweite Zeile für neue Felder (Layout angepasst) %>
-    <div class="col-md-3"><label class="form-label">Kaufdatum</label><input type="date" id="model-purchase_date" class="form-control"></div>
-    <div class="col-md-3"><label class="form-label">Preis (€)</label><input type="number" step="0.01" min="0" id="model-price" class="form-control" placeholder="z.B.
+<div class="col-md-3"><label class="form-label">Kaufdatum</label><input type="text" id="model-purchase_date" class="form-control" placeholder="tt.mm.jjjj"></div>    <div class="col-md-3"><label class="form-label">Preis (€)</label><input type="number" step="0.01" min="0" id="model-price" class="form-control" placeholder="z.B.
 1499.99"></div>
     <div class="col-md-2"><label class="form-label">Garantie (Mon.)</label><input type="number" min="0" id="model-warranty_months" class="form-control" placeholder="z.B.
 24"></div>
