--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -229,6 +229,7 @@
             </div>
           </div>
 
+          <div id="room-history-container">
           <hr class="my-3">
 
           <!-- Raum-Historie -->
@@ -263,7 +264,7 @@
             </table>
           </div>
         </div>
-
+</div>
         <div class="modal-footer">
           <button type="submit" class="btn btn-primary">
             <i class="bi bi-save me-1"></i> Speichern
