Fehlerbehebungen und weitere Arbeit am Logging, Umstellung der Sortierung der Device Liste auf ID abwärts, damit ein erstelltes Gerät als erstes angezeigt wird

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -77,6 +77,14 @@ font-size: 0.8em; }
     margin-right: 0 !important;
   }
 }
+
+.clickable-log-row {
+          cursor: pointer;
+        }
+        .clickable-log-row:hover {
+          background-color: #f8f9fa;
+          /* Helle Hervorhebung beim Hovern */
+        }
 </style>
 
 <script>
