--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -9,35 +9,69 @@
         
         <form id="settingsForm">
             <div class="card-body">
-                <p class="text-muted">Dieser Bereich ist für Administratoren reserviert und dient der Konfiguration von globalen Systemparametern.</p>
-                <hr>
+                <p class="text-muted">Dieser Bereich 
+ist für Administratoren reserviert und dient der Konfiguration von globalen Systemparametern.</p>
                 
+                <fieldset class="mb-3">
+                    <legend class="h6">Tabellenansicht (Geräte)</legend>
+                    <p class="form-text">Wählen Sie, welche Spalten in der Geräte-Haupttabelle als "optional" (standardmäßig ausgeblendet) behandelt werden sollen. Benutzer können diese Spalten bei Bedarf über einen Schalter einblenden.</p>
+                    <div class="ps-2">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="setting-opt-col-hostname">
+                            <label class="form-check-label" for="setting-opt-col-hostname">Hostname</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="setting-opt-col-serial_number">
+                            <label class="form-check-label" for="setting-opt-col-serial_number">Seriennummer</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="setting-opt-col-inventory_number">
+                            <label class="form-check-label" for="setting-opt-col-inventory_number">Inventarnummer</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="setting-opt-col-mac_address">
+                            <label class="form-check-label" for="setting-opt-col-mac_address">MAC-Adresse</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="setting-opt-col-ip_address">
+                            <label class="form-check-label" for="setting-opt-col-ip_address">IP-Adresse</label>
+                        </div>
+                    </div>
+                </fieldset>
+                <hr>
+
                 <div class="mb-3 col-md-6">
                     <label for="setting-default_ip_prefix" class="form-label">Standard IP-Präfix</label>
-                    <input type="text" class="form-control" id="setting-default_ip_prefix" placeholder="z.B. 192.168.">
+                 
+   <input type="text" class="form-control" id="setting-default_ip_prefix" placeholder="z.B. 192.168.">
                     <div class="form-text">Dieser Wert wird im "Gerät bearbeiten"-Dialog als Standard eingefügt, wenn keine IP vorhanden ist.</div>
                 </div>
 
                 <div class="mb-3 col-md-6">
                     <label for="setting-example-1" class="form-label">System-E-Mail-Adresse (Inaktiv)</label>
-                    <input type="email" class="form-control" id="setting-system_email" placeholder="z.B. admin@firma.de" disabled>
+ 
+                   <input type="email" class="form-control" id="setting-system_email" placeholder="z.B.
+admin@firma.de" disabled>
                     <div class="form-text">Für Benachrichtigungen (zukünftiges Feature).</div>
                 </div>
 
                 <div class="mb-3 col-md-6">
                     <label for="setting-maintenance_mode" class="form-label">Wartungsmodus (Inaktiv)</label>
-                    <div class="form-check form-switch">
+                  
+  <div class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" role="switch" id="setting-maintenance_mode" disabled>
                         <label class="form-check-label" for="setting-maintenance_mode">System für Nicht-Admins sperren (zukünftiges Feature)</label>
                     </div>
-                </div>
+                
+</div>
 
             </div>
             <div class="card-footer">
                 <button type="submit" class="btn btn-primary" id="saveSettingsBtn">
                     <i class="bi bi-save me-1"></i> Speichern
                 </button>
-                <span id="settings-save-status" class="ms-2"></span>
+               
+ <span id="settings-save-status" class="ms-2"></span>
             </div>
         </form> </div>
 </div>
