Hinzufügen eines neuen Imports, der die Daten vom Netzwerkscan importiert

--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -142,6 +142,7 @@ Ausgeschieden)</option>
               <th data-sort="ip_address" class="sortable-header" data-col-key="ip_address">IP-Adresse</th>
               <th data-sort="room" class="sortable-header">Raum</th>
      <th data-sort="active" class="sortable-header">Status</th>
+     <th data-sort="notes" class="sortable-header" data-col-key="notes">Notizen</th>
               <th style="width:120px;">Aktion</th>
             </tr>
           </thead>
