--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -36,6 +36,10 @@ ist für Administratoren reserviert und dient der Konfiguration von globalen Sys
                             <input class="form-check-input" type="checkbox" id="setting-opt-col-ip_address">
                             <label class="form-check-label" for="setting-opt-col-ip_address">IP-Adresse</label>
                         </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="setting-opt-col-notes">
+                            <label class="form-check-label" for="setting-opt-col-notes">Notizen</label>
+                        </div>
                     </div>
                 </fieldset>
                 <hr>
