Modell-Filterung hinzugefügt, Kategorien: Geräteanzahl hinzugefügt

--- a/views/master-data-categories.ejs
+++ b/views/master-data-categories.ejs
@@ -16,7 +16,10 @@
                         <tr>
                             <th data-sort="category_name" class="sortable-header">Name</th>
                             <th data-sort="description" class="sortable-header">Beschreibung</th>
-                            <th style="width: 15%;">Aktion</th>
+                            
+                            <th data-sort="model_count" class="sortable-header">Modelle</th>
+                            <th data-sort="active_devices" class="sortable-header">Geräte (Aktiv/Gesamt)</th>
+                            <th style="width: 10%;">Aktion</th>
                         </tr>
                     </thead>
                     <tbody id="device-categories-table-body">
