--- a/views/master-data-models.ejs
+++ b/views/master-data-models.ejs
@@ -10,6 +10,28 @@
             </button>
         </div>
         <div class="card-body">
+            <div class="row g-3 mb-3 align-items-end">
+                <div class="col-md-4">
+                    <label for="filter-category" class="form-label">Nach Kategorie filtern</label>
+                    <select id="filter-category" class="form-select">
+                        <option value="">Alle Kategorien</option>
+                        </select>
+                </div>
+                <div class="col-md-3"> <label for="filter-manufacturer" class="form-label">Nach Hersteller filtern</label>
+                    <input type="text" id="filter-manufacturer" class="form-control" placeholder="Hersteller eingeben...">
+                </div>
+
+                <div class="col-md-3">
+                    <div class="form-check pb-1"> <input class="form-check-input" type="checkbox" id="filter-show-all">
+                        <label class="form-check-label" for="filter-show-all">
+                            Modelle ohne Geräte anzeigen
+                        </label>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <button id="filter-clear" class="btn btn-outline-secondary w-100">Filter zurücksetzen</button>
+                </div>
+            </div>
             <div class="table-responsive">
                 <table class="table table-hover">
                     <thead>
