--- a/views/devices.ejs
+++ b/views/devices.ejs
@@ -270,12 +270,8 @@ Ausgeschieden)</option>
               </tbody>
               <tfoot>
                 <tr>
-                  <td><input type="date" id="rh-from" class="form-control"></td>
-                  <td><input type="date" id="rh-to" class="form-control" placeholder="leer = offen"></td>
-                  <td><select id="rh-room" class="form-select"></select></td>
-                  <td><input type="text" id="rh-notes" class="form-control" placeholder="Notizen"></td>
-                  <td class="text-end">
-                    <button type="button" class="btn btn-sm btn-primary" id="rh-add">
+                  <td colspan="4"></td> <td class="text-end">
+                    <button type="button" class="btn btn-sm btn-primary" id="rh-add" title="Neue Zeile hinzufügen">
                       <i class="bi bi-plus-lg"></i>
                     </button>
                   </td>
