Einfügen von Geräte-Count in die Raumliste

--- a/views/master-data-rooms.ejs
+++ b/views/master-data-rooms.ejs
@@ -15,13 +15,15 @@
                     <thead>
                         <tr>
                             <th style="width: 5%;">Sort</th>
-                            <th style"width: 15%;">Nummer</th>
-                            <th style="width: 30%;">Name</th>
+                            <th style="width: 15%;">Nummer</th>
+                            <th style="width: 25%;">Name</th>
+                            <th style="width: 15%;">Geräte (aktiv)</th>
                             <th style="width: 10%;">Etage</th>
                             <th style="width: 10%;">Sort#</th>
                             <th style="width: 15%;">Aktion</th>
                         </tr>
-                    </thead>
+        
+            </thead>
                     <tbody id="rooms-table-body">
                         </tbody>
                 </table>
