--- a/views/import_devices_simple.ejs
+++ b/views/import_devices_simple.ejs
@@ -12,7 +12,7 @@
         Legt <strong>keine</strong> neuen Modelle oder Räume an.
       </p>
       <p>Erforderliche Spalten: <code>serial_number</code>, <code>model_number</code>.<br>
-         Optionale Spalten: <code>ip_address</code>, <code>hostname</code>, <code>mac_address</code>.
+         Optionale Spalten: <code>ip_address</code>, <code>hostname</code>, <code>mac_address</code>, <code>inventory_number</code>.
       </p>
 
       <form id="importSimpleForm" action="/api/devices/import-simple" method="post" enctype="multipart/form-data" class="mt-3">
